fixed cropper aspect ratio, fixed some styling in register

--- a/src/less/pleio.less
+++ b/src/less/pleio.less
@@ -100,3 +100,7 @@ body {
         color: @color-error;
     }
 }
+
+.form__conditions .form__item {
+    margin: 0;
+}
